syntax = "proto3";

package careerhub.userinfo_service.restapi_grpc;
option go_package = "careerhub/userinfo_service/restapi_grpc";


service MatchJobGrpc{
    rpc FindMatchJob(FindMatchJobRequest)   returns (FindMatchJobResponse);
    rpc AddCondition(AddConditionRequest)   returns (IsSuccessResponse);
    rpc UpdateCondition(UpdateConditionRequest)   returns (IsSuccessResponse);
    rpc DeleteCondition(DeleteConditionRequest)   returns (IsSuccessResponse);
    rpc UpdateAgreeToMail(UpdateAgreeToMailRequest)   returns (IsSuccessResponse);
}

message FindMatchJobRequest{
    string userId = 1;
}

message FindMatchJobResponse{
    repeated Condition conditions = 1;
    bool agreeToMail = 2;
}

message Condition{
    string conditionId = 1;
    string conditionName = 2;
    Query query = 3;
}

message Query{
    repeated Category categories = 1;
    repeated Skill skillNames = 2;
    optional int32 minCareer = 3;
    optional int32 maxCareer = 4;
}

message Skill{
    repeated string Or = 1;
}

message Category {
    string site = 1;
    string categoryName = 2;
}

message FindConditionRequest{
    string userId = 1;
    string conditionId = 2;
}

message AddConditionRequest{
    string userId = 1;
    AddConditionReq condition = 2;
    uint32 limitCount = 3;
}

message AddConditionReq{
    string conditionName = 2;
    Query query = 3;
}

message IsSuccessResponse{
    bool IsSuccess = 1;
}

message UpdateConditionRequest{
    string userId = 1;
    Condition condition = 2;
}

message DeleteConditionRequest{
    string userId = 1;
    string conditionId = 2;
}

message UpdateAgreeToMailRequest{
    string userId = 1;
    bool agreeToMail = 2;
}